[package]
name = "adjucipes"
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0-only"
authors = ["Sammy L. Koch"]

[dependencies]
anyhow = "1.0"
camino = "1.1"
clap = { version = "4.5", features = ["derive"] }
exitcode = "1.1"
nu-ansi-term = "0.50"
serde_json = "1.0"
thiserror = "1.0"
toml = "0.8"
zip = "1.2"
